--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "kobo-tools",
   "version": "1.0.0",
-  "description": "",
-  "main": "kobo-monitor.js",
-  "type": "module",
+  "description": "Set of tools to get data from KoBo api and download media from a KoBo server.",
+  "main": "configs.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/framirez07/kobo-tools.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/framirez07/kobo-tools/issues"
+  },
+  "homepage": "https://github.com/framirez07/kobo-tools#readme",
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^0.21.0",
     "colors": "^1.4.0",
     "commander": "^2.20.3",
     "csv": "^5.3.2",
     "fs-extra": "^9.0.1",
-    "jsonpath-plus": "^4.0.0",
-    "node-fetch": "^2.6.1",
-    "node-jq": "^1.11.2",
+    "node-jq": "^1.11.3",
     "path": "^0.12.7",
-    "progress": "^2.0.3",
-    "typescript": "^4.0.3"
+    "progress": "^2.0.3"
   }
 }
