--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kobo-tools",
   "version": "1.0.0",
   "description": "Set of tools to get data from KoBo api and download media from a KoBo server.",
-  "main": "configs.js",
+  "main": "kobo-imgs-fs-updater.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
