--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "fs-extra": "^9.0.1",
     "node-jq": "^1.11.3",
     "path": "^0.12.7",
-    "progress": "^2.0.3"
+    "progress": "^2.0.3",
+    "sjcl": "^1.0.8"
   }
 }
