--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "kobo-imgs-fs-updater.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./kobo-imgs-fs-updater.js"
   },
   "repository": {
     "type": "git",
